--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -1,81 +1,41 @@
 {
+    "plugins\/gCalendar\/plugin_info\/info.json": {
+        "Plugin pour Google Agenda": "Plugin pour Google Agenda"
+    },
     "plugins\/gCalendar\/desktop\/php\/gCalendar.php": {
         "Ajouter un agenda": "Ajouter un agenda",
         "Rechercher": "Rechercher",
-        "Mes agendas Google": "Mes agendas Google",
-        "Général": "Général",
-        "Nom de l'équipement": "Nom de l'équipement",
+        "Mes Agendas": "Mes Agendas",
+        "Gestion": "Gestion",
+        "Ajouter": "Ajouter",
+        "Configuration": "Configuration",
+        "Sauvegarder": "Sauvegarder",
+        "Supprimer": "Supprimer",
+        "Configuration avancée": "Configuration avancée",
+        "Equipement": "Equipement",
+        "Commandes": "Commandes",
+        "Nom de l'équipement agenda": "Nom de l'équipement agenda",
         "Objet parent": "Objet parent",
         "Aucun": "Aucun",
-        "Autre Widget": "Autre Widget",
-        "A cocher si vous souhaitez utiliser un widget \"personnel\"; données brutes affichées dans ce cas. Laissez décocher pour utiliser le widget du plugin.": "A cocher si vous souhaitez utiliser un widget \"personnel\"; données brutes affichées dans ce cas. Laissez décocher pour utiliser le widget du plugin.",
         "Activer": "Activer",
         "Visible": "Visible",
-        "GCalendar": "GCalendar",
-        "L'URL de l'agenda google se trouve dans Paramètres>Agenda>[Agenda voulu]>Adresse privée XML<br\/>\n\t\t\t<br\/>\n\t\t\tPour configurer les évènements récupérés de votre Google Agenda, et ce qui va s'afficher dans votre widget, vous pouvez choisir : <br\/>\n\t\t\t- \"event courant\" : affichage des évènements courants, avec séparateur tiret ' - ' (\"ancien\" fonctionnement) <br\/>\n\t\t\t- \"event courant (avec heures)\" : affichage des évènements courants, avec l'heure de début et fin de l'évènement <br\/>\n\t\t\t- \"event heure à venir\" : affichage des évènements en cours et sur l'heure à venir, avec l'heure de début et de fin de l'évènement <br\/>\n\t\t\t- \"event sur la journée\" : affichage de tous les évènements de la journée, avec les heures de début et de fin <br\/>\n\t\t\t<\/br>\n\t\t\tVous pouvez aussi identifier votre \"position\" dans l'évènement en configurant \"l'indicateur début\/fin\" (non disponible pour \"event courant\")<br\/>\n\t\t\t- non : seulement l'indicateur d'activité \"[A]\" est précisé <br\/>\n\t\t\t- oui : informe si l'évènement est dans sa 1ère minute ou sa dernière ([D][A] et [F][A]) ": "L'URL de l'agenda google se trouve dans Paramètres>Agenda>[Agenda voulu]>Adresse privée XML<br\/>\n\t\t\t<br\/>\n\t\t\tPour configurer les évènements récupérés de votre Google Agenda, et ce qui va s'afficher dans votre widget, vous pouvez choisir : <br\/>\n\t\t\t- \"event courant\" : affichage des évènements courants, avec séparateur tiret ' - ' (\"ancien\" fonctionnement) <br\/>\n\t\t\t- \"event courant (avec heures)\" : affichage des évènements courants, avec l'heure de début et fin de l'évènement <br\/>\n\t\t\t- \"event heure à venir\" : affichage des évènements en cours et sur l'heure à venir, avec l'heure de début et de fin de l'évènement <br\/>\n\t\t\t- \"event sur la journée\" : affichage de tous les évènements de la journée, avec les heures de début et de fin <br\/>\n\t\t\t<\/br>\n\t\t\tVous pouvez aussi identifier votre \"position\" dans l'évènement en configurant \"l'indicateur début\/fin\" (non disponible pour \"event courant\")<br\/>\n\t\t\t- non : seulement l'indicateur d'activité \"[A]\" est précisé <br\/>\n\t\t\t- oui : informe si l'évènement est dans sa 1ère minute ou sa dernière ([D][A] et [F][A]) ",
-        "Ajouter une commande google agenda": "Ajouter une commande google agenda",
-        "Id": "Id",
+        "URL de retour": "URL de retour",
+        "Client ID": "Client ID",
+        "Secret key": "Secret key",
+        "Lier": "Lier",
+        "Lier à un utilisateur": "Lier à un utilisateur",
+        "Calendrier à surveiller": "Calendrier à surveiller",
+        "Autoriser les interactions": "Autoriser les interactions",
+        "Rediriger les reponses de Jeedom sur": "Rediriger les reponses de Jeedom sur",
         "Nom": "Nom",
-        "URL de l'agenda": "URL de l'agenda",
-        "Valeur par défaut": "Valeur par défaut",
-        "Format donnée": "Format donnée",
-        "Indic. début\/fin": "Indic. début\/fin",
-        "Afficher": "Afficher",
-        "Action": "Action",
-        "Supprimer": "Supprimer",
-        "Sauvegarder": "Sauvegarder",
-        "Vous n'avez encore d'agenda Google, cliquez à gauche sur le bouton ajouter un agenda pour commencer": "Vous n'avez encore d'agenda Google, cliquez à gauche sur le bouton ajouter un agenda pour commencer"
+        "Type": "Type",
+        "Action": "Action"
     },
     "plugins\/gCalendar\/desktop\/js\/gCalendar.js": {
-        "event courant": "event courant",
-        "event courant (avec heures)": "event courant (avec heures)",
-        "event heure à venir": "event heure à venir",
-        "event sur la journée": "event sur la journée",
-        "oui": "oui",
-        "non": "non",
-        "Afficher": "Afficher",
+        "Nom": "Nom",
         "Tester": "Tester"
     },
     "plugins\/gCalendar\/core\/class\/gCalendar.class.php": {
-        "Aucun": "Aucun",
-        "Janv": "Janv",
-        "Fév": "Fév",
-        "Mars": "Mars",
-        "Avril": "Avril",
-        "Mai": "Mai",
-        "Juin": "Juin",
-        "Juil": "Juil",
-        "Août": "Août",
-        "Sept": "Sept",
-        "Oct": "Oct",
-        "Nov": "Nov",
-        "Déc": "Déc",
-        "S": "S",
-        "évènement actif: 1ère minute": "évènement actif: 1ère minute",
-        "évènement actif: dernière minute": "évènement actif: dernière minute",
-        "évènement actif": "évènement actif",
-        "Présent": "Présent",
-        "aujourd'hui": "aujourd'hui",
-        "affichage": "affichage",
-        "voir Agenda Google": "voir Agenda Google",
-        "journée": "journée",
-        "prochaine heure": "prochaine heure",
-        "instantané": "instantané",
-        "Le répertoire suivant n'a pas put être créé": "Le répertoire suivant n'a pas put être créé",
-        "Le répertoire suivant vient d'être créé": "Le répertoire suivant vient d'être créé",
-        "la date de début est supérieure à la date de fin": "la date de début est supérieure à la date de fin",
-        "vérifier votre RDV dans l'agent Google": "vérifier votre RDV dans l'agent Google",
-        "Rafraichissement du fichier cache : OK": "Rafraichissement du fichier cache : OK",
-        "Le flux suivant n'est pas accéssible": "Le flux suivant n'est pas accéssible",
-        "Impossible de créer le dossier": "Impossible de créer le dossier",
-        "Ecriture impossible dans le fichier": "Ecriture impossible dans le fichier",
-        "Le flux récupéré ne correspond pas à un flux XML GCalendar": "Le flux récupéré ne correspond pas à un flux XML GCalendar",
-        "L'url suivante n'est pas valide": "L'url suivante n'est pas valide",
-        "Le fichier n'existe pas": "Le fichier n'existe pas",
-        "Le champ description(content) n'est pas correctement formaté (impossible de déterminer les dates de l'événement)": "Le champ description(content) n'est pas correctement formaté (impossible de déterminer les dates de l'événement)"
-    },
-    "plugins\/gCalendar\/plugin_info\/info.xml": {
-        "Plugin pour lire les evenements de google Agenda": "Plugin pour lire les evenements de google Agenda",
-        "Aucune": "Aucune"
+        "Erreur sur : ": "Erreur sur : "
     }
 }
